--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0",
     "gh-pages": "^1.1.0",
     "prettier": "^1.10.2"
   }
