--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-google-tagmanager": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
     "react-helmet": "^5.2.0"
