--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-google-tagmanager": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-plugin-sitemap": "^1.2.10",
-    "reactstrap": "^5.0.0-alpha.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "reactstrap": "^5.0.0-alpha.4"
   },
   "keywords": [
     "gatsby"
