--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "gatsby-cookoon-fr",
+  "description": "cookoon.fr built with Gatsby",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Cookoon <contact@cookoon.fr>",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
@@ -19,16 +19,16 @@
     "react-helmet": "^5.2.0",
     "reactstrap": "^5.0.0-alpha.4"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby", "cookoon"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy":
+      "gatsby build && cp ./src/CNAME public/ && gh-pages -d public -b master",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
