--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "deploy":
-      "gatsby build && cp src/CNAME public/ && gh-pages -d public -b master",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format":
       "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
