--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sitemap": "^1.2.10",
     "react-accessible-accordion": "^1.0.2",
     "react-helmet": "^5.2.0",
+    "react-onclickoutside": "^6.7.1",
     "reactstrap": "^5.0.0-alpha.4"
   },
   "keywords": [
