--- a/package.json
+++ b/package.json
@@ -7,35 +7,33 @@
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.158",
-    "gatsby-link": "^1.6.34",
-    "gatsby-plugin-catch-links": "^1.0.14",
+    "gatsby": "^1.9.223",
+    "gatsby-link": "^1.6.38",
+    "gatsby-plugin-catch-links": "^1.0.19",
     "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-plugin-google-tagmanager": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-plugin-sitemap": "^1.2.10",
-    "react-accessible-accordion": "^1.0.2",
+    "gatsby-plugin-google-tagmanager": "^1.0.15",
+    "gatsby-plugin-react-helmet": "^2.0.6",
+    "gatsby-plugin-sass": "^1.0.18",
+    "gatsby-plugin-sitemap": "^1.2.14",
+    "react-accessible-accordion": "^2.2.1",
     "react-helmet": "^5.2.0",
     "react-onclickoutside": "^6.7.1",
-    "reactstrap": "^5.0.0-alpha.4"
+    "reactstrap": "5.0.0-beta"
   },
-  "keywords": [
-    "gatsby",
-    "cookoon"
-  ],
+  "keywords": ["gatsby", "cookoon"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0",
     "gh-pages": "^1.1.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.11.1"
   }
 }
