--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-catch-links": "^1.0.19",
     "gatsby-plugin-favicon": "^2.1.1",
+    "gatsby-plugin-google-analytics": "^1.0.25",
     "gatsby-plugin-google-tagmanager": "^1.0.15",
     "gatsby-plugin-react-helmet": "^2.0.6",
     "gatsby-plugin-sass": "^1.0.18",
@@ -20,15 +21,17 @@
     "react-onclickoutside": "^6.7.1",
     "reactstrap": "5.0.0-beta"
   },
-  "keywords": ["gatsby", "cookoon"],
+  "keywords": [
+    "gatsby",
+    "cookoon"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
