--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0",
+    "gatsby-cli": "^1.1.52",
     "gh-pages": "^1.1.0",
     "prettier": "^1.11.1"
   }
