--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "version": "1.0.0",
   "author": "Cookoon <contact@cookoon.fr>",
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "classnames": "^2.2.5",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.223",
-    "gatsby-link": "^1.6.38",
-    "gatsby-plugin-catch-links": "^1.0.19",
-    "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-plugin-google-analytics": "^1.0.25",
-    "gatsby-plugin-google-tagmanager": "^1.0.15",
-    "gatsby-plugin-react-helmet": "^2.0.6",
-    "gatsby-plugin-sass": "^1.0.18",
-    "gatsby-plugin-sitemap": "^1.2.14",
-    "react-accessible-accordion": "^2.2.1",
-    "react-helmet": "^5.2.0",
-    "react-onclickoutside": "^6.7.1",
-    "react-responsive-modal": "^3.6.0",
-    "reactstrap": "5.0.0-beta"
+    "gatsby": "^2.13.14",
+    "gatsby-link": "^2.2.1",
+    "gatsby-plugin-catch-links": "^2.1.1",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-google-analytics": "^2.1.2",
+    "gatsby-plugin-google-tagmanager": "^2.1.3",
+    "gatsby-plugin-react-helmet": "^3.1.1",
+    "gatsby-plugin-sass": "^2.1.1",
+    "gatsby-plugin-sitemap": "^2.2.2",
+    "node-sass": "^4.12.0",
+    "react-accessible-accordion": "^3.0.0",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-onclickoutside": "^6.8.0",
+    "react-responsive-modal": "^4.0.1",
+    "reactstrap": "8.0.1"
   },
   "keywords": [
     "gatsby",
@@ -37,8 +39,8 @@
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0",
-    "gatsby-cli": "^1.1.52",
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.11.1"
+    "gatsby-cli": "^2.7.10",
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.18.2"
   }
 }
