--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.1.1",
     "gatsby-plugin-sass": "^2.1.1",
     "gatsby-plugin-sitemap": "^2.2.2",
+    "lodash": "^4.17.13",
     "node-sass": "^4.12.0",
     "react-accessible-accordion": "^3.0.0",
     "react-dom": "^16.8.6",
